--- a/sb-config.org
+++ b/sb-config.org
@@ -256,6 +256,88 @@ I use the [[https://github.com/bbatsov/zenburn-emacs][Zenburn theme]] when emacs
 
 The function [[elisp:(describe-function 'frame-monitor-attributes)][frame-monitor-attributes]] might be helpful to conditionally resize the main frame. See also [[http://stackoverflow.com/questions/16481984/get-width-of-current-monitor-in-emacs-lisp][Get width of current monitor in Emacs Lisp]].
 
+* Org mode
+  :LOGBOOK:
+  CLOCK: [2016-08-25 Thu 08:35]
+  :END:
+
+There we are! That's really the crux of this file!
+
+#+BEGIN_SRC emacs-lisp
+  ;; This should not be necessary
+  ;;(add-to-list 'load-path (concat user-emacs-directory "/elisp/org-mode/lisp"))
+
+  ;; For fontification
+  (require 'htmlize)
+
+  ;; Allow for links to be used outside Org
+  (global-set-key (kbd "C-c a") 'org-agenda)
+  (global-set-key (kbd "C-c L") 'org-insert-link-global)
+  (global-set-key (kbd "C-c o") 'org-open-at-point-global)
+
+  (org-babel-do-load-languages 'org-babel-load-languages '((C . t)
+                                                           (python . t)
+                                                           (maxima . t)))
+
+  (add-hook 'org-babel-after-execute-hook 'org-display-inline-images 'append)
+
+  (setq org-agenda-file-regexp "\\`[^.].*\\.\\(org\\|txt\\)\\'")
+  (setq org-agenda-files
+        (let ((root (f-join sb-path-to-local-documents "notes")))
+          (append (list root user-emacs-directory)
+                  (f-directories root (lambda (dir) (not (s-contains? "archives" dir)))))))
+  ;; Restore window configuration upon exiting agenda.
+  (setq org-agenda-restore-windows-after-quit t)
+  ;; Show agenda in the current window, keeping all other windows.
+  (setq org-agenda-window-setup 'current-window)
+  (setq org-archive-location (f-join sb-path-to-local-documents "notes" "archives" "%s_archive::"))
+  ;; Potentially dangerous
+  (setq org-confirm-babel-evaluate nil)
+  (setq org-export-preserve-breaks nil)
+  (setq org-export-time-stamp-file t)
+  (setq org-export-with-archived-trees 'headline)
+  (setq org-export-with-author t)
+  (setq org-export-with-clocks nil)
+  (setq org-export-with-creator 'comment)
+  (setq org-export-with-date t)
+  (setq org-export-with-drawers '(not "LOGBOOK"))
+  (setq org-export-with-email nil)
+  (setq org-export-with-emphasize t)
+  (setq org-export-with-entities t)
+  (setq org-export-with-fixed-width t)
+  (setq org-export-with-footnotes t)
+  (setq org-export-with-inlinetasks t)
+  (setq org-export-with-planning nil)
+  (setq org-export-with-priority nil)
+  (setq org-export-with-section-numbers nil)
+  (setq org-export-with-smart-quotes nil)
+  (setq org-export-with-special-strings t)
+  (setq org-export-with-statistics-cookies t)
+  (setq org-export-with-sub-superscripts t)
+  (setq org-export-with-tables t)
+  (setq org-export-with-tags t)
+  (setq org-export-with-tasks t)
+  (setq org-export-with-timestamps t)
+  (setq org-export-with-toc nil)
+  (setq org-export-with-todo-keywords t)
+  (setq org-html-htmlize-output-type 'css)
+  ;; Visit files in same window
+  (setq org-link-frame-setup (quote ((vm . vm-visit-folder-other-frame)
+                                     (vm-imap . vm-visit-imap-folder-other-frame)
+                                     (gnus . org-gnus-no-new-news)
+                                     (file . find-file-other-window)
+                                     (wl . wl-other-frame))))
+  (setq org-log-into-drawer t)
+  (setq org-startup-truncated nil) ;; Wrap lines
+  (setq org-startup-folded nil) ;; Don't open org files in folded mode
+  (setq org-src-fontify-natively t)
+  (setq org-table-copy-increment nil)
+  (setq org-todo-keywords '((sequence "A_FAIRE" "EN_ATTENTE" "UN_JOUR" "|"
+                                      "FAIT")
+                            (sequence "TODO" "|" "DONE")))
+  (setq system-time-locale "C") ;; Make sure that timestamps appear in English
+#+END_SRC
+
 * Magit
   :LOGBOOK:
   CLOCK: [2016-04-21 Thu 07:25]--[2016-04-21 Thu 08:25] =>  1:00
