--- a/sb-config.org
+++ b/sb-config.org
@@ -260,22 +260,31 @@ I use the [[https://github.com/bbatsov/zenburn-emacs][Zenburn theme]] when emacs
 
 The function [[elisp:(describe-function 'frame-monitor-attributes)][frame-monitor-attributes]] might be helpful to conditionally resize the main frame. See also [[http://stackoverflow.com/questions/16481984/get-width-of-current-monitor-in-emacs-lisp][Get width of current monitor in Emacs Lisp]].
 
-* Org mode
+* Org Mode
   :PROPERTIES:
   :CUSTOM_ID: ORG_MODE
   :END:
   :LOGBOOK:
+  CLOCK: [2016-08-26 Fri 08:25]
   CLOCK: [2016-08-25 Thu 08:35]--[2016-08-25 Thu 08:50] =>  0:15
   :END:
 
 There we are! That's really the crux of this file!
 
+** Activation
+
+Make agenda accessible from everywhere.
+
+#+BEGIN_SRC emacs-lisp
+  (global-set-key (kbd "C-c a") 'org-agenda)
+#+END_SRC
+
+** Misc
+
 #+BEGIN_SRC emacs-lisp
   ;; This should not be necessary
   ;;(add-to-list 'load-path (concat user-emacs-directory "/elisp/org-mode/lisp"))
 
-  ;; Allow for agenda to be used outside Org
-  (global-set-key (kbd "C-c a") 'org-agenda)
 
   (org-babel-do-load-languages 'org-babel-load-languages '((C . t)
                                                            (python . t)
