--- a/sb-config.org
+++ b/sb-config.org
@@ -265,6 +265,7 @@ The function [[elisp:(describe-function 'frame-monitor-attributes)][frame-monito
   :CUSTOM_ID: ORG_MODE
   :END:
   :LOGBOOK:
+  CLOCK: [2016-08-29 Mon 07:30]--[2016-08-29 Mon 08:20] =>  0:50
   CLOCK: [2016-08-26 Fri 08:25]--[2016-08-26 Fri 08:50] =>  0:25
   CLOCK: [2016-08-25 Thu 08:35]--[2016-08-25 Thu 08:50] =>  0:15
   :END:
@@ -279,6 +280,75 @@ Make agenda accessible from everywhere.
 
 #+BEGIN_SRC emacs-lisp
   (global-set-key (kbd "C-c a") 'org-agenda)
+#+END_SRC
+
+** [[info:Org#Document structure][Document structure]]
+
+*** [[info:Org#Visibility cycling][Visibility cycling]]
+
+**** [[info:Org#Initial visibility][Initial visibility]]
+
+Org files are not opened in folded mode.
+
+#+BEGIN_SRC emacs-lisp
+  (setq org-startup-folded nil)
+#+END_SRC
+
+** [[info:Org#TODO Items][TODO Items]]
+
+*** [[info:Org#TODO%20extensions][Extended use of TODO keywords]]
+
+**** [[info:Org#TODO%20types][TODO keywords as types]]
+
+#+BEGIN_SRC emacs-lisp
+  (setq org-todo-keywords '((sequence "A_FAIRE" "EN_ATTENTE" "UN_JOUR" "|" "FAIT")
+                            (sequence "A_LIRE" "|" "LU")
+                            (sequence "A_VOIR" "|" "VU")
+                            (sequence "TODO" "|" "DONE")))
+#+END_SRC
+
+*** [[info:Org#Progress logging][Progress logging]]
+
+**** [[info:Org#Tracking TODO state changes][Tracking TODO state changes]]
+
+#+BEGIN_SRC emacs-lisp
+  (setq org-log-into-drawer t)
+#+END_SRC
+
+** [[info:Org#Agenda views][Agenda views]]
+
+Restore window configuration upon exiting agenda. Show agenda in the current window, keeping all other windows.
+
+#+BEGIN_SRC emacs-lisp
+  (setq org-agenda-restore-windows-after-quit t)
+  (setq org-agenda-window-setup 'current-window)
+#+END_SRC
+
+*** [[info:Org#Agenda files][Agenda files]]
+
+=*.org= and =*.txt= files are considered as agenda files. These files are looked for in
+
+  - =~/.emacs.d= (this file!)
+  - =sb-path-to-local-documents/notes= and its subdirectories (=archives= is excluded).
+
+#+BEGIN_SRC emacs-lisp
+  (setq org-agenda-file-regexp "\\`[^.].*\\.\\(org\\|txt\\)\\'")
+  (setq org-agenda-files
+        (let ((root (f-join sb-path-to-local-documents "notes")))
+          (append (list root user-emacs-directory)
+                  (f-directories root (lambda (dir) (not (s-contains? "archives" dir)))))))
+#+END_SRC
+
+** [[info:Org#Capture - Refile - Archive][Capture - Refile - Archive]]
+
+*** [[info:Org#Archiving][Archiving]]
+
+**** [[info:Org#Moving subtrees][Moving a tree to the archive file]]
+
+Archived trees from =FILE.org= are moved to =sb-path-to-local-documents/notes/archives/FILE.org_archive=.
+
+#+BEGIN_SRC emacs-lisp
+  (setq org-archive-location (f-join sb-path-to-local-documents "notes" "archives" "%s_archive::"))
 #+END_SRC
 
 ** [[info:Org#Working with source code][Working with source code]]
@@ -301,21 +371,19 @@ Displayed inlined images are automatically updated after evaluating source block
   (add-hook 'org-babel-after-execute-hook 'org-display-inline-images 'append)
 #+END_SRC
 
-** Misc
+** [[info:Org#Miscellaneous][Miscellaneous]]
+
+*** [[info:Org#Code evaluation security][Code evaluation and security issues]]
+
+This is potentially risky!
 
 #+BEGIN_SRC emacs-lisp
-  (setq org-agenda-file-regexp "\\`[^.].*\\.\\(org\\|txt\\)\\'")
-  (setq org-agenda-files
-        (let ((root (f-join sb-path-to-local-documents "notes")))
-          (append (list root user-emacs-directory)
-                  (f-directories root (lambda (dir) (not (s-contains? "archives" dir)))))))
-  ;; Restore window configuration upon exiting agenda.
-  (setq org-agenda-restore-windows-after-quit t)
-  ;; Show agenda in the current window, keeping all other windows.
-  (setq org-agenda-window-setup 'current-window)
-  (setq org-archive-location (f-join sb-path-to-local-documents "notes" "archives" "%s_archive::"))
-  ;; Potentially dangerous
   (setq org-confirm-babel-evaluate nil)
+#+END_SRC
+
+** TODO Sort these settings
+
+#+BEGIN_SRC emacs-lisp
   (setq org-export-preserve-breaks nil)
   (setq org-export-time-stamp-file t)
   (setq org-export-with-archived-trees 'headline)
@@ -350,14 +418,9 @@ Displayed inlined images are automatically updated after evaluating source block
                                      (gnus . org-gnus-no-new-news)
                                      (file . find-file-other-window)
                                      (wl . wl-other-frame))))
-  (setq org-log-into-drawer t)
   (setq org-startup-truncated nil) ;; Wrap lines
-  (setq org-startup-folded nil) ;; Don't open org files in folded mode
   (setq org-src-fontify-natively t)
   (setq org-table-copy-increment nil)
-  (setq org-todo-keywords '((sequence "A_FAIRE" "EN_ATTENTE" "UN_JOUR" "|"
-                                      "FAIT")
-                            (sequence "TODO" "|" "DONE")))
   (setq system-time-locale "C") ;; Make sure that timestamps appear in English
 #+END_SRC
 
