ccmode, ob-ipython, ispell, epa.

--- a/sb-config.org
+++ b/sb-config.org
@@ -463,6 +463,55 @@ This is potentially risky!
   (setq org-confirm-babel-evaluate nil)
 #+END_SRC
 
+** ob-ipython
+   :LOGBOOK:
+   CLOCK: [2016-08-31 Wed 05:50]--[2016-08-31 Wed 06:05] =>  0:15
+   CLOCK: [2015-12-01 Tue 08:20]--[2015-12-01 Tue 08:45] =>  0:25
+   CLOCK: [2015-11-24 Tue 07:45]--[2015-11-24 Tue 09:00] =>  1:15
+   CLOCK: [2015-11-05 Thu 07:15]--[2015-11-05 Thu 08:15] =>  1:00
+   CLOCK: [2015-11-03 Tue 08:00]--[2015-11-03 Tue 08:30] =>  0:30
+   :END:
+
+[[https://github.com/gregsexton/ob-ipython][ob-ipython]] provides org-babel integration with Jupyter for evaluation of (Python by default) code blocks.
+
+The following commands invoke ob-ipython with a specific profile.
+
+#+BEGIN_SRC emacs-lisp
+  (require 'ob-ipython)
+  (setq ob-ipython-kernel-extra-args (quote ("--profile=ob-ipython")))
+#+END_SRC
+
+For the anaconda distribution, the package =jupyter_console= must be installed. The =ob-ipython= Jupyter profile was created as follows
+
+#+BEGIN_EXAMPLE
+ipython profile create ob-ipython
+#+END_EXAMPLE
+
+The config file is then located in =~/.ipython/profile_ob-ipython/ipython_config.py=. Its contents is reproduced below.
+
+#+BEGIN_SRC python
+  c.InteractiveShellApp.exec_lines = [
+      'import matplotlib.pyplot as plt',
+      'import numpy as np',
+      'plt.style.use("zenburn")',
+  ]
+
+  c.InteractiveShellApp.matplotlib = 'inline'
+  c.TerminalIPythonApp.display_banner = False
+#+END_SRC
+
+A zenburn stylesheet was also created for Matplotlib. File =~/.matplotlib/stylelib/zenburn.mplstyle= is reproduced below
+
+#+BEGIN_EXAMPLE
+text.color : dcdccc
+axes.facecolor : 3f3f3f
+axes.edgecolor : dcdccc
+axes.labelcolor : dcdccc
+axes.color_cycle : 8cd0d3,7f9f7f,cc9393,93e0e3,dc8cc3,f0dfaf, dcdccc
+xtick.color : dcdccc
+ytick.color : dcdccc
+#+END_EXAMPLE
+
 * Magit
   :LOGBOOK:
   CLOCK: [2016-04-21 Thu 07:25]--[2016-04-21 Thu 08:25] =>  1:00
@@ -736,6 +785,12 @@ With these principles, implementation of =sb-insert-bibref= is straightforward.
 
 * Development
 
+** C
+
+#+BEGIN_SRC emacs-lisp
+  (setq-default c-basic-offset 4)
+#+END_SRC
+
 ** Python
    :LOGBOOK:
    CLOCK: [2016-08-24 Wed 07:55]--[2016-08-24 Wed 08:25] =>  0:30
@@ -878,6 +933,32 @@ From the [[https://www.emacswiki.org/emacs/WhiteSpace][EmacsWiki]]: "This packag
           ))
 
   (setq whitespace-style (quote (face lines-tail)))
+#+END_SRC
+
+* Easy PG (GnuPG interface for Emacs)
+
+#+BEGIN_SRC emacs-lisp
+  (require 'epa-file)
+  (epa-file-enable)
+#+END_SRC
+
+* Ispell
+
+#+BEGIN_SRC emacs-lisp
+  (setq ispell-dictionary "francais")
+  (setq ispell-tex-skip-alists
+        (list
+         (append (car ispell-tex-skip-alists)
+                 '(("\\\\cite"            ispell-tex-arg-end)
+                   ("\\\\nocite"          ispell-tex-arg-end)
+                   ("\\\\includegraphics" ispell-tex-arg-end)
+                   ("\\\\author"          ispell-tex-arg-end)
+                   ("\\\\ref"             ispell-tex-arg-end)
+                   ("\\\\eqref"           ispell-tex-arg-end)
+                   ("\\\\label"           ispell-tex-arg-end)
+                   ("\\\\cite[tp]"        ispell-tex-arg-end)
+                   ))
+         (cadr ispell-tex-skip-alists)))
 #+END_SRC
 
 * Blog-related customizations
