--- a/sb-init.org
+++ b/sb-init.org
@@ -9,10 +9,10 @@ I use the literate programming paradigm for my emacs configuration. This file sh
   - [[https://www.mfoot.com/blog/2015/11/22/literate-emacs-configuration-with-org-mode/][Literate emacs configuration with org mode]]
   - [[http://pages.sachachua.com/.emacs.d/Sacha.html#orgheadline188][Sacha Chua's Emacs configuration]]
 
-This file should be saved in =~/.emacs.d=, and the following line should be appended at the bottom of =~/.emacs.d/init.el=
+This file should be saved in =~/.emacs.d= (for example, as =~/.emacs.d/sb-init.el=) and the following line should be appended at the bottom of =~/.emacs.d/init.el=
 
 #+BEGIN_SRC emacs-lisp :tangle no
-  (org-babel-load-file (concat user-emacs-directory "sb-config.org"))
+  (org-babel-load-file (concat user-emacs-directory "sb-init.org"))
 #+END_SRC
 
 * Miscellaneous
